[package]
name = "bean"
version = "0.1.1"
authors = ["bit-ranger <sincerebravefight@gmail.com>"]
edition = "2018"

description = "object container for rust like spring beans"
homepage = "https://github.com/bit-ranger/bean"
readme = "README.md"
keywords = ["container", "spring", "beans", "ioc"]
categories = ["development-tools"]
license = "MIT/Apache-2.0"
repository = "https://github.com/bit-ranger/bean"

[dependencies]
bean-macro = {path = "../macro"}